# pg_graphql

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.graphiql.yml  docker-compose.tests.yml  docker-compose.yaml  docker-compose.yml  index.html  mkdocs.yaml  mkdocs.yml  pg_graphql--0.1.0.sql  pg_graphql--0.1.1.sql  pg_graphql--0.1.2.sql  pg_graphql--0.1.3.sql  pg_graphql--0.1.4.sql  pg_graphql--0.1.5.sql  pg_graphql--0.2.0.sql  pg_graphql--0.2.1.sql  pg_graphql--0.3.0.sql  pg_graphql--0.3.1.sql  pg_graphql--0.3.2.sql  pg_graphql--0.3.3.sql  pg_graphql--0.4.0.sql  pg_graphql.control  pg_net.control  requirements_docs.txt  setup.py  shell.nix  sitemap.xml
.ci/: docker-compose.yml
.github/: main.yml
.github/ISSUE_TEMPLATE/: bug_report.md  rfc.md
.github/uffizzi/: docker-compose.uffizzi.yaml
api/: index.html
assets/: demo_schema.graphql  demo_schema.sql
changelog/: index.html
computed_fields/: index.html
configuration/: index.html
contributing/: index.html
docs/: api.md  changelog.md  computed_fields.md  configuration.md  contributing.md  example_schema.md  functions.md  index.md  installation.md  performance.md  quickstart.md  reflection.md  roadmap.md  security.md  spec.md  sql_interface.md  supabase.md  usage_with_apollo.md  usage_with_relay.md  views.md
example_schema/: index.html
functions/: index.html
graphql_lexer/: graphql_lexer.py  setup.py
installation/: index.html
performance/: index.html
pg_graphql/: Cargo.toml  build.rs  pg_graphql.control
pg_graphql/c/: lib.h
quickstart/: index.html
reflection/: index.html
roadmap/: index.html
search/: search_index.json
security/: index.html
sql/: directives.sql  load_sql_context.sql  pg_graphql--0.1.sql  pg_net--0.1.sql  resolve.sql  schema_version.sql  sequential_executor.sql
sql_interface/: index.html
src/: builder.rs  constants.rs  error.rs  expand.rs  graphql.rs  gson.rs  lib.c  lib.rs  merge.rs  merge_fields.rs  omit.rs  parser_util.rs  resolve.rs  sql_types.rs  transpile.rs  worker.c
supabase/: index.html
test/: conftest.py  fixtures.sql  resolve___type_connection_fields.out  setup.sql  test_component.py  test_engine.py  test_execute.py  test_inspection.py  test_parse.py  test_resolver.py  test_temp.py
usage_with_apollo/: index.html
usage_with_relay/: index.html
views/: index.html
(+446 files in other folders)
